2010-05-15  Leandro Pereira  <leandro@profusion.mobi>

        Reviewed by Adam Treat.

        [EFL] Add build system for the EFL port.
        http://webkit.org/b/37945

        * CMakeLists.txt: Added.
        * CMakeListsEfl.txt: Added.
        * config.h: Add conditional to look for cmakeconfig.h.
        * jsc/CMakeLists.txt: Added.
        * jsc/CMakeListsEfl.txt: Added.
        * wtf/CMakeLists.txt: Added.
        * wtf/CMakeListsEfl.txt: Added.

2010-05-15  Chao-ying Fu  <fu@mips.com>

        Reviewed by Oliver Hunt.

        Update MIPS JIT for unsigned right shift, Math.sqrt, load16
        https://bugs.webkit.org/show_bug.cgi?id=38412

        Fixed MIPS build failure.

        * assembler/MIPSAssembler.h:
        (JSC::MIPSAssembler::srl):
        (JSC::MIPSAssembler::srlv):
        (JSC::MIPSAssembler::sqrtd):
        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::urshift32):
        (JSC::MacroAssemblerMIPS::sqrtDouble):
        (JSC::MacroAssemblerMIPS::load16):
        (JSC::MacroAssemblerMIPS::supportsFloatingPointSqrt):
        * jit/JSInterfaceJIT.h:

2010-05-15  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Geoffrey Garen.

        WebInspector: JSC Should provide heap size info for Timeline panel.
        https://bugs.webkit.org/show_bug.cgi?id=38420

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * runtime/Collector.cpp:
        (JSC::Heap::size):
        * runtime/Collector.h:

2010-05-15  Dave Tapuska  <dtapuska@rim.com>

        Reviewed by Darin Adler.

        Add a new define for we need strict arena alignment. ARMv5 with
        double word instructions set this value.

        * wtf/Platform.h:

2010-05-14  Stephanie Lewis  <slewis@apple.com>

        Rubber-stamped by Mark Rowe.

        Update order files.

        * JavaScriptCore.order:

2010-05-14  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>
